# autocorr

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  README.md
.github/workflows/: test.yml
benchmark/: CMakeLists.txt  README  benchmark.c  ubench.h
example/: CMakeLists.txt  main.c
generation/: autocorr.c.in  generate.lua  generate.sh  generated.h.in  params.c.in
src/: CMakeLists.txt  autocorr.c  autocorr.h  autocorr2.c  consts.c  consts.h  internal.h
tests/: CMakeLists.txt  tests.c
